@@ -206,29 +206,6 @@
                 </configuration>
             </plugin>
 
-
-            <!-- Used for integration tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-tests</id>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <skipTests>true</skipTests>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- build jar with deps -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
